--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="text-base antialiased leading-tight">
 	<head>
 		<meta charset="utf-8" />
-		<title>Mobile ARK</title>
+		<title>Labelscoin</title>
 
 		<base href="/" />
 
